--- a/x86_64.config
+++ b/x86_64.config
@@ -47,6 +47,8 @@ CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_kmod-kvm-amd=y
 CONFIG_PACKAGE_kmod-kvm-intel=y
 CONFIG_PACKAGE_kmod-kvm-x86=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_OPENSSL_ENGINE_CRYPTO=y
 CONFIG_OPENSSL_ENGINE_DIGEST=y
 CONFIG_OPENSSL_WITH_CAMELLIA=y
